Advanced Markov tutorial added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(initial_probs)
 export(outcomes)
 export(payoffs)
 export(prev_event)
+export(prob2rate)
 export(prob_left)
+export(rate2prob)
 export(states)
 importFrom(magrittr,"%>%")
