--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(gmod_build,gmod_decision)
 S3method(gmod_build,gmod_markov)
 S3method(gmod_evaluate,gmod_decision)
 S3method(gmod_evaluate,gmod_markov)
+S3method(gmod_gen_model_function,gmod_decision)
+S3method(gmod_gen_model_function,gmod_markov)
 S3method(gmod_parse,gmod_decision)
 S3method(gmod_parse,gmod_markov)
 export(curr_state)
@@ -14,6 +16,7 @@ export(event_mapping)
 export(gmod)
 export(gmod_build)
 export(gmod_evaluate)
+export(gmod_gen_model_function)
 export(gmod_parse)
 export(initial_probs)
 export(outcomes)
