use outcomes decision matrix summary
changed the text of event_mapping to use outcome instead of results.  Also, changed the decision summary_results to produce a matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(gmod_evaluate)
 export(gmod_gen_model_function)
 export(gmod_parse)
 export(initial_probs)
-export(outcomes)
+export(final_outcomes)
 export(payoffs)
 export(prev_event)
 export(prob2rate)
