--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,17 +13,19 @@ export(curr_state)
 export(decisions)
 export(discounts)
 export(event_mapping)
+export(final_outcomes)
 export(gmod)
 export(gmod_build)
 export(gmod_evaluate)
 export(gmod_gen_model_function)
 export(gmod_parse)
 export(initial_probs)
-export(final_outcomes)
 export(payoffs)
 export(prev_event)
 export(prob2rate)
 export(prob_left)
 export(rate2prob)
 export(states)
+export(tunnel2state)
+export(tunnels)
 importFrom(magrittr,"%>%")
