--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,22 +9,16 @@ S3method(gmod_gen_model_function,gmod_decision)
 S3method(gmod_gen_model_function,gmod_markov)
 S3method(gmod_parse,gmod_decision)
 S3method(gmod_parse,gmod_markov)
-export(curr_state)
 export(decisions)
-export(discounts)
-export(event_mapping)
-export(final_outcomes)
+export(event)
 export(gmod)
 export(gmod_build)
 export(gmod_evaluate)
 export(gmod_gen_model_function)
 export(gmod_parse)
-export(initial_probs)
 export(payoffs)
 export(prob2rate)
-export(prob_left)
 export(rate2prob)
 export(states)
 export(tunnel2state)
-export(tunnels)
 importFrom(magrittr,"%>%")
