gmod_expand_functions added
creates a dataframe for each function and an excel workbook with the variables as sheets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(event)
 export(gmod)
 export(gmod_build)
 export(gmod_evaluate)
+export(gmod_expand_functions)
 export(gmod_gen_model_function)
 export(gmod_parse)
 export(payoffs)
