--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(gmod_gen_model_function,gmod_decision)
 S3method(gmod_gen_model_function,gmod_markov)
 S3method(gmod_parse,gmod_decision)
 S3method(gmod_parse,gmod_markov)
+export("%not_in%")
 export(decisions)
 export(event)
 export(gmod)
