--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
 Description: gmod creates and evaluates decision and health economic evaluation models using the Grammer of Modeling. 
     Grammar of Modeling. Gmod uses a single description for each element of a decision or Markov model. GMOD comes 
     with absolutely no worranty. So, please use it at your own discretion.
-License: `use_gpl3_license()` 
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
