gmod() returns function and list
Major syntax update where the gmod returns both the model function and the list of model structure components. Also, n_cycles are now passed only to gmod_evluate_functions() and model_function_name().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,16 @@
 S3method("+",gmod_class)
 S3method(gmod_build,gmod_decision)
 S3method(gmod_build,gmod_markov)
-S3method(gmod_evaluate,gmod_decision)
-S3method(gmod_evaluate,gmod_markov)
 S3method(gmod_gen_model_function,gmod_decision)
 S3method(gmod_gen_model_function,gmod_markov)
 S3method(gmod_parse,gmod_decision)
 S3method(gmod_parse,gmod_markov)
+S3method(print,gmod_class)
 export(decisions)
 export(event)
 export(gmod)
 export(gmod_build)
-export(gmod_evaluate)
-export(gmod_expand_functions)
+export(gmod_evaluate_functions)
 export(gmod_gen_model_function)
 export(gmod_parse)
 export(payoffs)
